# rules_terraform

./: .bazelrc  .travis.yml  README.md  WORKSPACE
terraform/: BUILD.bazel  repositories.bzl
