load(":repositories.bzl", "terraform_tools_test")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]))

config_setting(
    name = "linux_amd64",
    values = {
        "cpu": "k8",
    },
)

config_setting(
    name = "darwin_amd64",
    values = {
        "cpu": "darwin",
    },
)

genrule(
    name = "terraform",
    srcs = select({
        "//terraform:linux_amd64": ["@terraform_linux_amd64//:terraform"],
        "//terraform:darwin_amd64": ["@terraform_darwin_amd64//:terraform"],
    }),
    outs = ["bin/terraform"],
    cmd = "cp $(<) $(@)",
    executable = True,
    output_to_bindir = 1,
)

terraform_tools_test(
    name = "tools_test",
    size = "small",
)
